[tool.poetry]
name = "datawizzard"
version = "0.1.0"
description = ""
authors = ["Marilzon <maxmaril@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
sqlalchemy = "^2.0.35"
pytest = "^8.3.3"
pyaml = "^24.9.0"
deltalake = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
